envcrypt-test/tests/fixtures/invalid_syntax.stderr
error: Invalid syntax. Valid forms are `envcrypt!("VAR_NAME")` and `envcrypt!("VAR_NAME", "custom error message")`.
 --> tests/fixtures/invalid_syntax.rs:4:5
  |
4 |     envcrypt!("this" => "is", wrong)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `envcrypt` (in Nightly builds, run with -Z macro-backtrace for more info)
